# syncforge-tui

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/db/: connection.rs  diff.rs  mod.rs  schema.rs  sync.rs
src/ui/: connection_form.rs  data_sync.rs  mod.rs  schema_diff.rs  spinner.rs  table_browser.rs
