[package]
name = "syncforge-tui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform database schema and data sync tool - TUI version"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite"
] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
dirs = "5"
anyhow = "1"
thiserror = "1"
